<resources>
    <string name="app_name">Info</string>
    <string name="example">Пример:</string>
    <string name="exit">Выход</string>
    <string name="changeText">Выберите тему:</string>
    <string name="right">-></string>
    <string name="teory10">ОБЪЕМ ПАМЯТИ ТЕКСТОВЫХ ДАННЫХ</string>
    <string name="teory11">     Основная формула для решения 1 задания ОГЭ по информатике:</string>
    <string name="teory12">Iоб = k * i</string>
    <string name="teory13">Iоб — объем сообщения\nk — количество символов в сообщении\n</string>
    <string name="teory14">Кроме того, может пригодиться формула Хартли:</string>
    <string name="teory15">N – количество равновероятностных событий,\n\ni – количество информации (бит) об одном таком событии (минимальное целое число)</string>
    <string name="teory16">СКОРОСТЬ ПЕРЕДАЧИ ИНФОРМАЦИИ</string>
    <string name="teory17">Перечислим основные формулы, которые необходимо знать при решении 1 задания ОГЭ, связанного со скоростью передачи информации.</string>
    <string name="teory18">Скорость передачи информации определяется по формуле:</string>
    <string name="teory19">V = I / t</string>
    <string name="teory111">измеряется в бит/с\nV — скорость передачи данных\nI — объем (размер) передаваемого файла (сообщения)\nt — время, за которое передается файл (сообщение)</string>
    <string name="teory112">Для верного вычисления обычно необходимо все значения переводить в следующие единицы измерения:\nt — секунды (с)\nI — бит</string>
    <string name="teory113">Пропорциональные зависимости в формулах</string>
    <string name="teory114">В заданиях на нахождение скорости передачи информации или размера файла часто необходимо учитывать пропорциональную зависимость:</string>
    <string name="teory115">При увеличении скорости передачи информации (V) в определенное количество раз, время передачи (t) уменьшится в такое же количество раз (при неизменном размере файла).
И наоборот: при уменьшении скорости передачи информации в определенное количество раз, время передачи увеличится в такое же количество раз (при неизменном размере файла).</string>
    <string name="teory116">V (скорость) была 4 бит/с\nt (время) = 2 c\nV стала 2 бит/с (уменьшилась в 2 раза)\n\nЧему равно t?\n\nТак как V уменьшилась в 2 раза, то t увеличится в 2 раза\nОтвет: t = 2*2 = 4 с</string>
    <string name="teory117">При увеличении скорости передачи информации (V) в определенное количество раз, количество передаваемой информации (I) может быть увеличено в такое же количество раз (при неизменном времени).
И наоборот: при уменьшении скорости передачи информации (V) в определенное количество раз, количество передаваемой информации (I), которое может быть передано, уменьшится в такое же количество раз (при неизменном времени).</string>
    <string name="teory118">V (скорость) была 4 бит/с\nI (размер) = 16 бит\nV стала 2 бит/с (уменьшилась в 2 раза)\n\nФайл какого размера можно передать, т.е. I = ?\n\nТак как V уменьшилась в 2 раза, то и I уменьшится в 2 раза\nОтвет: I = 16/2 = 8 бит</string>
    <string name="teory20">Кодирование</string>
    <string name="teory21">— это форма представления информации, удобная для её хранения, передачи и обработки. При кодировании символам исходного алфавита ставятся в соответствие так называемые коды.</string>
    <string name="teory23">Расшифровка или декодирование представляет собой восстановление исходного сообщения из последовательности кодов.</string>
    <string name="teory24">Декодирование может быть однозначным и многозначным. Если при расшифровке возможно получить несколько различных вариантов исходного сообщения, то такое декодирование неоднозначно.</string>
    <string name="teory25">При расшифровке с единственным возможным результатом сообщения имеет место однозначное декодирование.</string>
    <string name="teory26">Иногда процесс декодирования проще выполнять с конца зашифрованного сообщения.</string>
    <string name="teory30">Для подготовки к решению 3 задания ОГЭ по информатике следует вспомнить знаки сравнения.</string>
    <string name="teory31">В логических выражениях используются следующие знаки сравнения:</string>
    <string name="teory32">В логических выражениях участвуют всего два значения выражений: ИСТИНА и ЛОЖЬ.</string>
    <string name="teory33">Рассмотрим результат выполнения логических выражений для двух высказываний — А и Б:</string>
    <string name="teory34">С операцией ИЛИ результатом будет ЛОЖЬ только в одном единственном случае, — когда оба выражения — А и Б — ложны</string>
    <string name="teory35">С операцией И результатом будет ИСТИНА только в одном единственном случае, — когда оба выражения — А и Б — истинны</string>
    <string name="teory36">Результаты для операции ИЛИ:</string>
    <string name="teory37">Результаты для операции И:</string>
    <string name="teory38">Результаты для операции НЕ (отрицание):</string>
    <string name="teory39">Порядок выполнения логических операций:</string>
    <string name="teory310">Если отрицание НЕ стоит перед скобкой с выражением, то НЕ ставится перед каждой частью выражения в скобках и при этом операция внутри скобок меняется:</string>
    <string name="teory311">НЕ перед скобками с общим выражением:</string>
    <string name="teory40">Графы</string>
    <string name="teory41">Иногда очень трудно структурировать информацию описанными структурами из-за сложных «взаимоотношений» между объектами. Тогда можно использовать графы:</string>
    <string name="teory42">Граф</string>
    <string name="teory43">– это набор вершин и связей между ними, называющихся рёбрами:</string>
    <string name="teory44">Матрица и список смежности</string>
    <string name="teory45">Связный граф</string>
    <string name="teory46">– это граф, между любыми вершинами которого существует путь.</string>
    <string name="teory47">Дерево</string>
    <string name="teory48">– это связный граф без циклов (замкнутых участков).</string>
    <string name="teory49">Взвешенные графы и весовая матрица</string>
    <string name="teory410">У взвешенных графов указан «вес ребра»:</string>
    <string name="teory411">Из взвешенных графов получается весовая матрица, обратное преобразование тоже возможно.</string>
    <string name="teory412">ПОИСК КРАТЧАЙШЕГО ПУТИ (ПЕРЕБОР)</string>
    <string name="teory413">Определение кратчайшего пути между пунктами A и D:</string>
    <string name="teory414">В заданиях ОГЭ этой темы чаще всего используются две информационные модели — таблицы и схемы.</string>
    <string name="teory415">Информация в таблице строится по следующим правилам: на пересечении строки и столбца находится информация, характеризующая комбинацию этой строки и столбца.</string>
    <string name="teory416">На схеме информация строится по следующему правилу: если между объектами схемы имеется связь, то она отображается линией, соединяющей названия этих объектов на схеме.</string>
    <string name="teory50">У исполнителя Альфа две команды, которым присвоены номера:\n\n
1. прибавь 1\n
2. умножь на b\n\n
(b – неизвестное натуральное число; b ≥ 2)\n
Первая из них увеличивает число на экране на 1, втора умножает его на b.\n
Алгоритм для исполнителя Альфа – это последовательность номеров команд.\n\n

Найдите значение числа b, при котором из числа 6 по алгоритму 11211 будет получено число 82.</string>
    <string name="teory51">Решение</string>
    <string name="teory52">Запишем все действия исходной программы 11211. Учтем, что исходное число — 6. В целях соблюдения верной последовательности операций будем использовать скобки:</string>
    <string name="teory53">В результате программы алгоритм выдает число 82. Значит, выполним уравнение:</string>
    <string name="teory54">Упростим уравнение и найдем неизвестное b:</string>
    <string name="teory55">Ответ: 10</string>
    <string name="teory60">ЛИНЕЙНЫЕ АЛГОРИТМЫ </string>
    <string name="teory61">Оператор присваивания </string>
    <string name="teory62">Для решения задач программе требуются данные. Данные хранятся в переменных, которые имеют свои имена — идентификаторы. </string>
    <string name="teory63">идентификаторы X или Y, или более длинные идентификаторы переменных — number1, counter и т.п. </string>
    <string name="teory64">Идентификаторы состоят из буквы, за которой могут следовать буквы, цифры или символ подчеркивания </string>
    <string name="teory65">Чтобы задать переменной какое-либо значение используется оператор присваивания. Оператор присваивания (в Паскале) обозначается как :=, выполняет правую часть выражения и присваивает результат переменной, расположенной в левой части выражения: </string>
    <string name="teory66">В таком случае правильно говорить, что переменной x присвоено значение 5.\n
После того как переменной присвоено какое-то значение, можно это значение «переприсвоить», т.е. назначить другое значение:Ы </string>
    <string name="teory67">x:= 2\ny:= 3\nx:= y+2\nВ результате в переменной x находится значение 5, т.к. 3 + 2 = 5. </string>
    <string name="teory68">Арифметические операции </string>
    <string name="teory69">Порядок выполнения операций </string>
    <string name="teory610">1.вычисление выражений в скобках;\n
умножение, деление слева направо;\n
сложение и вычитание слева направо. </string>
    <string name="teory611">ПРОСТЕЙШИЕ ЦИКЛИЧЕСКИЕ АЛГОРИТМЫ </string>
    <string name="teory612">Цикл </string>
    <string name="teory613">— это фрагмент кода программы для исполнителя, который осуществляет некоторые действия определенное количество раз.</string>
    <string name="teory614">Пример на python, цикл for:</string>
    <string name="teory615">Цикл выполняется пять раз, потому что:\n
k — счетчик цикла, который изменяет свое значение, начиная от одного и, заканчивая пятью;\n
в цикле выполняет одно действие: i += 2, т.е. к переменной i прибавляется 2.</string>
    <string name="teory616">ЦИКЛИЧЕСКИЕ АЛГОРИТМЫ ОБРАБОТКИ МАССИВА ЧИСЕЛ </string>
    <string name="teory617">Массивы чисел</string>
    <string name="teory618">— это последовательность чисел, которые принадлежат одной и той же переменной (называемой «массив») и имеют порядковые номера — индексы. Массив часто именуется таблицей. </string>
    <string name="teory619">Пример инициализации массива и работы с ним в Питоне (Python): </string>
    <string name="teory70">Адресация в Интернете</string>
    <string name="teory71">Адрес документа в Интернете (с английского — URL — Uniform Resource Locator) состоит из следующих частей:</string>
    <string name="teory72">-протокол передачи данных; может быть:</string>
    <string name="teory73">http (для Web-страниц) или\n\n
                            ftp (для передачи файлов)\n\n
                            встречается также защищенный протокол https;</string>
    <string name="teory74">-символы-разделители ://, отделяющие название протокола от остальной части адреса;\n\n
                            -доменное имя сайта (или IP-адрес);\n\n
                            -может присутствовать также: каталог на сервере, где располагается файл;\n\n
                            -имя файла.</string>
    <string name="teory75">Каталоги на сервере разделяются прямым слэшем «/»</string>
    <string name="teory76">Пример:</string>
    <string name="teory77">1.имя протокола сетевой службы – определяет тип сервера HTTP (протокол передачи гипертекста);\n\n
2.разделитель в виде символа двоеточия и двух символов Slash;\n\n
3.полное доменное имя сервера;\n\n
4.путь поиска web-документа на компьютере;\n\n
5.имя web-сервера;\n\n
6.домен верхнего уровня «org»;\n\n
7.имя национального домена «ru»;\n\n
8.каталог main на компьютере;\n\n
9.каталог news в каталоге main;\n\n
10.конечная цель поиска – файл main_news.html.</string>
    <string name="teory80">Поисковые запросы:</string>
    <string name="left"><![CDATA[<-]]></string>
    <string name="txt_name">Игра</string>
    <string name="dalee">Далее</string>
    <string name="enter_text">Введите текст</string>
</resources>