<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/title_big"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/changeText"
            android:textColor="@color/blue"
            android:textSize="34sp" />

        <Button
            android:id="@+id/btn_nav"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical|end"
            android:background="@drawable/angles"
            android:backgroundTint="@color/blue"
            android:gravity="center"
            android:text="@string/exit"
            android:theme="@style/button"
            android:visibility="invisible" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/sc"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_small"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:textColor="@color/blue"
                android:textSize="24sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/title_small2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:autoText="false"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/teory1"
                android:textColor="@color/blue"
                android:textSize="24sp"
                android:visibility="gone" />

            <include
                android:id="@+id/c0"
                layout="@layout/c0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <include
                android:id="@+id/c1"
                layout="@layout/c1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <include
                android:id="@+id/c2"
                layout="@layout/c2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <include
                android:id="@+id/c3"
                layout="@layout/c3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <include
                android:id="@+id/c4"
                layout="@layout/c4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <include
                android:id="@+id/c5"
                layout="@layout/c5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <include
                android:id="@+id/c6"
                layout="@layout/c6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <include
                android:id="@+id/c7"
                layout="@layout/c7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <include
                android:id="@+id/c8"
                layout="@layout/c8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <include
                android:id="@+id/c9"
                layout="@layout/c9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <include
                android:id="@+id/c10"
                layout="@layout/c10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <include
                android:id="@+id/c11"
                layout="@layout/c11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <include
                android:id="@+id/c12"
                layout="@layout/c12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <include
                android:id="@+id/c13"
                layout="@layout/c13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <include
                android:id="@+id/c14"
                layout="@layout/c14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <include
                android:id="@+id/c15"
                layout="@layout/c15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <include
                android:id="@+id/c16"
                layout="@layout/c16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <include
                android:id="@+id/c17"
                layout="@layout/c17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <include
                android:id="@+id/c18"
                layout="@layout/c18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <include
                android:id="@+id/c19"
                layout="@layout/c19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <include
                android:id="@+id/c20"
                layout="@layout/c20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <include
                android:id="@+id/l_id"
                layout="@layout/list_conspect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/left"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="30dp"
            android:layout_weight="1"
            android:background="@drawable/angles"
            android:backgroundTint="@color/blue"
            android:gravity="center"
            android:text="@string/left"
            android:textSize="14sp"
            android:theme="@style/button"
            android:visibility="visible" />

        <Button
            android:id="@+id/exit"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="30dp"
            android:background="@drawable/angles"
            android:backgroundTint="@color/blue"
            android:gravity="center"
            android:text="@string/exit"
            android:theme="@style/button" />

        <Button
            android:id="@+id/right"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="30dp"
            android:layout_weight="1"
            android:background="@drawable/angles"
            android:backgroundTint="@color/blue"
            android:gravity="center"
            android:text="@string/right"
            android:textSize="14sp"
            android:theme="@style/button"
            android:visibility="visible" />
    </LinearLayout>


</LinearLayout>